--- a/src/webapp/webapp.csproj
+++ b/src/webapp/webapp.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0"/>
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3"/>
+  </ItemGroup>
 </Project>
